post works in db

--- a/src/app/components/celebrities/celebrities-form/celebrities-form.component.html
+++ b/src/app/components/celebrities/celebrities-form/celebrities-form.component.html
@@ -4,6 +4,11 @@
   <div>
     Name:
     <input type="text" [(ngModel)]="celebrity.name" name="name">
+    Occupation:
+    <input type="text" [(ngModel)]="celebrity.occupation" name="occupation">
+    Catchphrase:
+    <input type="text" [(ngModel)]="celebrity.catchPhrase" name="catchPhrase">
+    <input type="submit" name="createCelebrity" value="Crear">
   </div>
   
   <!-- ... -->
